<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="justToday">Just Tooday</string>
    <string name="ServerSync">Server Sync</string>
    <string name="app_name">HitBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="take_a_picture">Take a picture!</string>
    <string name="lumberjack">Lumberjack</string>
    <string name="team">Team</string>
    <string name="map">Map</string>
    <string name="diameter">Tree \u00D8</string>
    <string name="length">Length</string>
    <string name="m_format">--.--</string>
    <string name="cm_format">--.--</string>
    <string name="si_meters">m</string>
    <string name="si_centimeters">cm</string>
    <string name="area_description">Area description</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="not_found">not found</string>
    <string name="history">History</string>
    <string name="title_activity_history_detail">HistoryDetailActivity</string>
    <string name="tree_id">Tree Id</string>
    <string name="felled_on">Felled on</string>
    <string name="volume">Volume</string>
    <string name="si_volume">m³</string>
    <string name="preferences_file_key">preferences</string>
    <string name="toast_gps_not_activated">GPS is not activated!</string>
    <string name="Yes">yes</string>
    <string name="No">no</string>
    <string name="delete_alert_title">Delete Tree?</string>
    <string name="delete_alert_message">The current tree will be deleted from database!</string>
    <string name="id">ID:</string>
    <string name="toast_error_creating_tree">Error on creating Tree, please try again.</string>
    <string name="sort_by">Sort by</string>
    <string name="s_optn_date">Date (ascending)</string>
    <string name="s_optn_lumberjack">Lumberjack (ascending)</string>
    <string name="s_optn_team">Team (ascending)</string>
    <string name="s_optn_today">Just today (ascending)</string>
    <string name="s_optn_date_inv">Date (falling)</string>
    <string name="s_optn_lumberjack_inv">Lumberjack (falling)</string>
    <string name="s_optn_team_inv">Team (falling)</string>
    <string name="s_optn_today_inv">Just today (falling)</string>
    <string name="toast_tree_successful">New tree successfully created</string>
    <string name="volume_sum">Volume sum</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="delete_all_data_btn">Delete all data</string>
    <string name="delte_all_data">This button deletes all the tress from database</string>
    <string name="delete_all_alert_title">Delete all Trees?</string>
    <string name="delete_all_alert_message">All Trees will be deleted from database!</string>
    <string name="toast_all_data_deleted">All trees have been deleted.</string>

</resources>
