<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HitbookActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_picture"
        android:id="@+id/camera"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_above="@id/camera">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/lumberjack"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lumberjack"
                android:id="@+id/textView"
                android:layout_alignTop="@id/editText"
                android:layout_alignBottom="@id/editText"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/team"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_below="@id/editText"
                android:layout_alignLeft="@id/editText"
                android:layout_alignStart="@id/editText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/team"
                android:id="@+id/textView2"
                android:layout_alignTop="@id/editText2"
                android:layout_alignBottom="@id/editText2"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/cm_format"
                android:ems="10"
                android:id="@+id/editTextDiameter"
                android:layout_alignLeft="@id/editText"
                android:layout_alignStart="@id/editText"
                android:layout_marginTop="10dp"
                android:layout_below="@id/editText2"
                android:gravity="end"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/diameter"
                android:id="@+id/textViewDiameter"
                android:layout_alignTop="@id/editTextDiameter"
                android:layout_alignBottom="@id/editTextDiameter"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/si_centimeters"
                android:id="@+id/textViewCentimeters"
                android:layout_alignTop="@id/editTextDiameter"
                android:layout_alignBottom="@id/editTextDiameter"
                android:layout_toRightOf="@id/editTextDiameter"
                android:layout_toEndOf="@id/editTextDiameter"
                android:gravity="center"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/m_format"
                android:ems="10"
                android:id="@+id/editTextLength"
                android:gravity="end"
                android:layout_alignLeft="@id/editText"
                android:layout_alignStart="@id/editText"
                android:layout_below="@id/editTextDiameter"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/length"
                android:id="@+id/textViewLength"
                android:layout_alignTop="@id/editTextLength"
                android:layout_alignBottom="@id/editTextLength"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/si_meters"
                android:id="@+id/textViewMeters"
                android:layout_alignTop="@id/editTextLength"
                android:layout_alignBottom="@id/editTextLength"
                android:gravity="center"
                android:layout_alignLeft="@id/textViewCentimeters"
                android:layout_alignStart="@id/textViewCentimeters"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/area_description"
                android:id="@+id/textViewArea"
                android:layout_marginTop="10dp"
                android:layout_below="@id/editTextLength"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="2"
                android:gravity="bottom"
                android:hint="@string/area_description"
                android:ems="10"
                android:id="@+id/editTextArea"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="2dp"
                android:layout_below="@id/textViewArea"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gps_coordinates"
                android:id="@+id/textViewGPS"
                android:layout_below="@id/editTextArea"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/wallet_hint_foreground_holo_light"
                android:text="@string/longitude"
                android:id="@+id/textViewLongitude"
                android:layout_below="@id/textViewGPS"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/wallet_hint_foreground_holo_light"
                android:text="@string/not_found"
                android:id="@+id/textViewLongitudeNumber"
                android:layout_alignTop="@id/textViewLongitude"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_toRightOf="@id/textViewLongitude"
                android:layout_toEndOf="@id/textViewLongitude"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/wallet_hint_foreground_holo_light"
                android:text="@string/latitude"
                android:id="@+id/textViewLatitude"
                android:layout_below="@id/textViewLongitude"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/wallet_hint_foreground_holo_light"
                android:text="@string/not_found"
                android:id="@+id/textViewLatitudeNumber"
                android:layout_alignTop="@id/textViewLatitude"
                android:gravity="center"
                android:layout_alignLeft="@id/textViewLongitudeNumber"
                android:layout_alignStart="@id/textViewLongitudeNumber"/>

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
